--- a/com.run_adss.plist
+++ b/com.run_adss.plist
@@ -1,1 +1,32 @@
-com.run_adss.plist
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+    <key>Label</key>
+    <string>com.run_adss</string>
+    <key>KeepAlive</key>
+    <false/>
+    <key>RunAtLoad</key>
+    <false/>
+    <key>ProgramArguments</key>
+    <array>
+        <string>/Users/NLee/virtualenvs/adss/bin/python</string>
+        <string>/Users/NLee/Desktop/ADSS/main.py</string>
+    </array>
+    <key>WorkingDirectory</key>
+        <string>/Users/NLee/Desktop/ADSS</string>
+    <key>StartCalendarInterval</key>
+    <dict>
+        <key>Hour</key>
+        <integer>7</integer>
+        <key>Minute</key>
+        <integer>07</integer>
+    </dict>
+    <key>KeepAlive</key>
+    <false/>
+    <key>StandardOutPath</key>
+        <string>/tmp/NLee.out</string>
+    <key>StandardErrorPath</key>
+        <string>/tmp/NLee.err</string>
+</dict>
+</plist>
