--- a/com.run_adss_example.plist
+++ b/com.run_adss_example.plist
@@ -5,15 +5,18 @@
     <key>Label</key>
     <string>com.run_adss</string>
     <key>KeepAlive</key>
-    <false/>
+    <dict>
+        <key>SuccessfulExit</key>
+        <false/>
+    </dict>
     <key>RunAtLoad</key>
     <false/>
     <key>ProgramArguments</key>
     <array>
         <string>/Users/NLee/virtualenvs/adss/bin/python</string>
         <string>/Users/NLee/Desktop/ADSS/main.py</string>
-        <string>[EMAIL]</string>
-        <string>[PASSWORD]</string>
+        <string>[HOST EMAIL]</string>
+        <string>[HOST EMAIL PASSWORD]</string>
         <string>all</string>
         <string>run</string>
     </array>
@@ -22,7 +25,7 @@
     <key>StartCalendarInterval</key>
         <array>
             <dict>
-                <key>Weekday</key>
+                <key>Day</key>
                 <integer>1</integer>
                 <key>Hour</key>
                 <integer>7</integer>
@@ -30,7 +33,7 @@
                 <integer>07</integer>
             </dict>
             <dict>
-                <key>Weekday</key>
+                <key>Day</key>
                 <integer>2</integer>
                 <key>Hour</key>
                 <integer>7</integer>
@@ -38,7 +41,7 @@
                 <integer>07</integer>
             </dict>
             <dict>
-                <key>Weekday</key>
+                <key>Day</key>
                 <integer>3</integer>
                 <key>Hour</key>
                 <integer>7</integer>
@@ -46,7 +49,7 @@
                 <integer>07</integer>
             </dict>
             <dict>
-                <key>Weekday</key>
+                <key>Day</key>
                 <integer>4</integer>
                 <key>Hour</key>
                 <integer>7</integer>
@@ -54,7 +57,7 @@
                 <integer>07</integer>
             </dict>
             <dict>
-                <key>Weekday</key>
+                <key>Day</key>
                 <integer>5</integer>
                 <key>Hour</key>
                 <integer>7</integer>
@@ -62,8 +65,6 @@
                 <integer>07</integer>
             </dict>
         </array>
-    <key>KeepAlive</key>
-    <false/>
     <key>StandardOutPath</key>
         <string>/tmp/NLee.out</string>
     <key>StandardErrorPath</key>
